--- a/src/app/pages/admin/password-protection/password-protection.component.html
+++ b/src/app/pages/admin/password-protection/password-protection.component.html
@@ -27,6 +27,10 @@
             <span>{{ passwordProtectionMode.heroTitle }}</span>
           </div>
           <div class="info-row">
+            <strong>Meta Title:</strong>
+            <span>{{ passwordProtectionMode.metaTitle }}</span>
+          </div>
+          <div class="info-row">
             <strong>Footer Text:</strong>
             <span>{{ passwordProtectionMode.footerText }}</span>
           </div>
@@ -131,6 +135,17 @@
               [(value)]="heroTitle"
               [disabled]="isFormDisabled()"
               (valueChange)="onHeroTitleChange($event)">
+            </basic-input>
+          </div>
+
+          <!-- Meta Title -->
+          <div class="form-row">
+            <basic-input
+              label="Meta Title (Browser Tab)"
+              placeholder="Enter the page title shown in browser tab"
+              [(value)]="metaTitle"
+              [disabled]="isFormDisabled()"
+              (valueChange)="onMetaTitleChange($event)">
             </basic-input>
           </div>
 
