--- a/src/app/pages/admin/articles/create/create-article.component.html
+++ b/src/app/pages/admin/articles/create/create-article.component.html
@@ -88,6 +88,17 @@
 
           <div class="form-row">
             <div class="form-group full-width">
+              <basic-input
+                label="Meta Keywords"
+                placeholder="Enter SEO keywords separated by commas (e.g., web development, javascript, tutorial)"
+                [value]="metaKeywords"
+                (valueChange)="metaKeywords = $event"
+              />
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group full-width">
               <asset-selector
                 label="Featured Image"
                 placeholder="Search for featured image..."
