--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -113,6 +113,11 @@
             <h4>Social Links</h4>
             <p>Manage social media links</p>
           </div>
+          <div class="section-card" routerLink="/admin/copyright">
+            <span class="card-icon">©️</span>
+            <h4>Copyright</h4>
+            <p>Manage copyright information</p>
+          </div>
         </div>
       </div>
 
