asset type selector

--- a/src/app/pages/admin/static-assets/static-assets.component.html
+++ b/src/app/pages/admin/static-assets/static-assets.component.html
@@ -87,6 +87,22 @@
 
           <div class="form-row">
             <div class="form-group">
+              <label for="asset-type">Asset Type *</label>
+              <select
+                id="asset-type"
+                [(ngModel)]="assetType"
+                class="form-select"
+                required
+              >
+                <option *ngFor="let option of assetTypeOptions" [value]="option.value">
+                  {{ option.label }}
+                </option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group">
               <label for="asset-description">Description</label>
               <textarea
                 id="asset-description"
